[project]
name = "keyboardcrumbs-mcp"
version = "1.0.0"
description = "Live threat intelligence MCP server — IP lookup, CVE intel, KEV Oracle predictions, malware hashes, pre-attack staging detection. Free, no API key required."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
keyboardcrumbs-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
