[project]
name = "keyboardcrumbs-mcp"
version = "1.0.1"
description = "Live threat intelligence MCP server — IP lookup, CVE intel, KEV Oracle predictions, malware hashes, pre-attack staging detection. Free, no API key required."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "threat-intelligence", "cybersecurity", "cve", "kev", "malware", "claude"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://keyboardcrumbs.com"
Repository = "https://github.com/kbcrumbs/mcp"
"Bug Tracker" = "https://github.com/kbcrumbs/mcp/issues"

[project.scripts]
keyboardcrumbs-mcp = "keyboardcrumbs_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["keyboardcrumbs_mcp"]
